--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A playground to follow along with 99 bottles",
   "main": "99bottles.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -21,7 +21,10 @@
   },
   "homepage": "https://github.com/rjdeloss/99bottles-js#readme",
   "devDependencies": {
+    "@types/jest": "^27.4.1",
     "@types/node": "^17.0.25",
+    "jest": "^27.5.1",
+    "ts-jest": "^27.1.4",
     "typescript": "^4.6.3"
   }
 }
